# flatiron-cleaner

./: README.md  pyproject.toml
example/: tutorial.ipynb
flatiron_cleaner/: __init__.py  breast.py  colorectal.py  general.py  headneck.py  melanoma.py  nsclc.py  prostate.py  renal.py  urothelial.py
